[package]
name = "orbit"
version = "0.9.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clif = { git = "https://github.com/c-rus/clif", tag = "0.1.3", features = ["color"] }
curl = "0.4.44"
home = "0.5"
serde_json = "1.0.91"
tempfile = "3.5"
fs_extra = "1.3"

toml = "0.7"
serde = "1.0"
serde_derive = "1.0"

zip = "0.6"
glob = "0.3"
ignore = "0.4"
chrono = "0.4"
colored = "2"
toml_edit = "0.19" # @todo: remove

url = "2.2"

# git2 = "0.14" # removed for future releases

# ssh2 = "0.9.3" # @todo: integrate