[package]
name = "orbit"
version = "0.21.0"
description = "Package manager and build tool for HDLs"
authors = ["Chase Ruskin <cruskin@umich.edu>"]
keywords = ["hdl", "package-manager", "build-tool", "verilog", "vhdl"]
repository = "https://github.com/chaseruskin/orbit"
documentation = "https://chaseruskin.github.io/orbit"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cliproc = "2"
colored = "2"
uuid = { version = "1.3.3", features = ["v4", "fast-rng", "macro-diagnostics"] }
uuid25 = { version = "0.3.4", features = ["uuid"] }

home = "0.5"
tempfile = "3.5"
fs_extra = "1.3"
glob = "0.3"
ignore = "0.4"
thiserror = "1.0.0"

toml = "0.7"
toml_edit = "0.19"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.108"

curl = "0.4.44"
zip = "0.6"
flate2 = "1.0.26"